--- a/svsolution/TODO
+++ b/svsolution/TODO
@@ -5,8 +5,8 @@ if t_c is the same as b_c should they be the same thing? yes that does work see 
 +    dut_if #(uniq_pkg::b_c) dut_if_t_c(clk);
 
 --- a/svsolution/TB2_pkg.sv
--    typedef dut_agent #(uniq_pkg::t_c) dut_agent_t_c_t;
-+    typedef dut_agent #(uniq_pkg::b_c) dut_agent_t_c_t;
+-    typedef agent #(uniq_pkg::t_c) agent_t_c_t;
++    typedef agent #(uniq_pkg::b_c) agent_t_c_t;
 
 --- a/svsolution/TB_common.svh
 -    typedef virtual dut_if #(uniq_pkg::t_c) dut_if_t_c_t;
